<?xml version="1.0"?>
<package format="2">

  <name>root_gazebo</name>
  <version>0.0.0</version>

  <description>
    This package contains world, relevent models and plugins needed to simulate root in gazebo.
  </description>

  <maintainer email="adityashriwastava7@gmail.com">
    Aditya Shriwastava
  </maintainer>
  <license>BSD 3-Clause License</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <exec_depend>roscpp</exec_depend>

  <build_depend>geometry_msgs</build_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <build_depend>tf2_ros</build_depend>
  <exec_depend>tf2_ros</exec_depend>

  <build_depend>gazebo_msgs</build_depend>
  <exec_depend>gazebo_msgs</exec_depend>

  <build_depend>nav_msgs</build_depend>
  <exec_depend>nav_msgs</exec_depend>

  <export>
    <rosdoc config="rosdoc.yaml"/>
  </export>

</package>
